--- a/module_2/Dockerfile
+++ b/module_2/Dockerfile
@@ -3,5 +3,5 @@ FROM python:3.10
 WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["streamlit", "run", "app/main.py"]
+CMD ["streamlit", "run", "app/main.py", "--server.maxUploadSize 2048"]
 EXPOSE 8501
