--- a/module_2/requirements.txt
+++ b/module_2/requirements.txt
@@ -9,7 +9,6 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 chess==1.10.0
 click==8.1.7
-contourpy==1.2.1
 cv==1.0.0
 cycler==0.12.1
 decorator==4.4.2
@@ -40,15 +39,14 @@ jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
 mdurl==0.1.2
 moviepy==1.0.3
-numpy==1.26.4
+numpy==1.24.4
 openai==1.29.0
 opencv-python==4.9.0.80
 orjson==3.10.3
 packaging==24.0
-pandas==2.2.2
+pandas==2.0.3
 pillow==10.3.0
 proglog==0.1.10
 protobuf==4.25.3
@@ -92,4 +90,4 @@ uvloop==0.19.0
 watchdog==4.0.0
 watchfiles==0.21.0
 websockets==11.0.3
-ffmpeg
+ffmpeg-python
